--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - /bin/cp -R * /home/$USER/public_html
-    - php /home/$USER/public_html/artisan migrate --force
+    - export DEPLOYPATH=/home/example/public_html/
+    - /bin/cp -R images $DEPLOYPATH
