--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,4 @@
----
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/example/public_html/
-    - /bin/cp -R images $DEPLOYPATH
+    - export DEPLOYPATH=/home/username/public_html/
+    - /bin/cp -R public/* $DEPLOYPATH
